<resources>
    <string name="app_name">NotePad_DEV</string>
    <string name="edit_usuario">E-mail</string>
    <string name="edit_senha">Senha</string>
    <string name="edit_repetir_senha">Repetir Senha</string>
    <string name="edit_botao">Entrar</string>
    <string name="edit_botao_criar">Criar e Entrar</string>
    <string name="edit_escolha">ou</string>
    <string name="botao_Sair">Sair</string>
    <string name="todo">TODO</string>
    <string name="text_nao_tem_conta">Não possui conta?</string>
    <string name="link_criar_conta">Criar conta.</string>
    <string name="criar_conta_texto">Só mais alguns passos…</string>
    <string name="contente_description1">Back</string>
    <string name="contente_description2">IconeCreateAccount</string>
    <string name="contente_description3">AddNewNotePAD</string>
    <string name="contente_description4">TituloPagina</string>
    <string name="contente_description5">TituloNotePad</string>
    <string name="contente_description6">TextoNotepad</string>
    <string name="contente_description7">BotaoRemover</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="logout_botao">LogOut"</string>
    <string name="wallpaper_botao">Wallpapers""</string>
    <string name="info_botao">Info"</string>
    <string name="titulo_pagina">Adicionar Novo NotePad</string>
    <string name="titulo_notepad">Titulo</string>
    <string name="texto_notepad">Escreva alguma coisa…</string>
    <string name="titulo_editar_notepad">Edite seu notepad</string>
    <string name="titulo_tema">Dark/Light mode</string>
    <string name="nome_botao_tema">Trocar de tema:</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>