<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_vertical"
    android:orientation="vertical"
    tools:context=".Login_Activity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/editUser"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/edit_usuario"
        android:inputType="textPersonName"
        android:autofillHints="username" />


    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/edit_senha"
        android:inputType="textPassword"
        android:autofillHints="password"/>

    <Button
        android:id="@+id/botaoEntrar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/edit_botao"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/edit_escolha" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/botaoGoogle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"/>



</LinearLayout>