<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewNotePad_Activity">
    <include android:id="@+id/toolbarNewNotePad"
        layout="@layout/toolbar_activity_home"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tituloPagina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_pagina"
            android:textColor="@color/dark_mode"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginTop="65dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:contentDescription="@string/contente_description4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/purple"
        android:padding="16dp"
        android:autofillHints="name">

        <EditText
            android:id="@+id/notePadTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo_notepad"
            android:textSize="28sp"
            android:textAlignment="center"
            android:textStyle="italic"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize"
            android:autofillHints="name"
            android:inputType="textAutoCorrect" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="333dp"
        android:layout_height="385dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="180dp"
        android:layout_marginRight="40dp"
        android:padding="16dp">

        <EditText
            android:id="@+id/notePadTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="@drawable/rounded_corner2"
            android:gravity="top"
            android:hint="@string/texto_notepad"
            android:minLines="15"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic"
            android:importantForAutofill="no"
            tools:ignore="TextFields" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/botaoRemoverNotepad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:backgroundTint="#F44336"
        android:contentDescription="@string/contente_description7"
        android:elevation="10dp"
        android:src="@drawable/baseline_delete_24"
        android:tint="@color/light_mode"
        app:rippleColor="@color/light_mode"
        app:tint="@color/light_mode"
        app:useCompatPadding="true"
        tools:ignore="ImageContrastCheck"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/botaoSalvarNotePad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="#4CAF50"
        android:contentDescription="@string/contente_description3"
        android:elevation="10dp"
        android:src="@drawable/baseline_check_24"
        android:tint="@color/light_mode"
        app:rippleColor="@color/light_mode"
        app:tint="@color/light_mode"
        app:useCompatPadding="true"
        tools:ignore="ImageContrastCheck" />



</RelativeLayout>