<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BACKGROUND_TEMA"
    tools:context=".Tema_Activity"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <include
        android:id="@+id/toolbarTema"
        layout="@layout/toolbar_activity_home"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tituloTema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:contentDescription="@string/contente_description4"
            android:gravity="center"
            android:text="@string/titulo_tema"
            style="@style/TEXT_TEMA"
            android:textSize="30sp"
            android:textStyle="bold" />



    </LinearLayout>

    <TextView
        android:id="@+id/nomeBotao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/contente_description4"
        android:text="@string/nome_botao_tema"
        style="@style/TEXT_TEMA"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="130dp"
        android:layout_marginStart="40dp"/>

    <Switch
        android:id="@+id/botaoSwitch"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:layout_marginStart="300dp"/>

</RelativeLayout>